--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,13 @@
       rel="stylesheet"
     />
 
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=PT+Sans&display=swap"
+      rel="stylesheet"
+    />
+
     <title>Scott Thompson Listrak Assessment</title>
   </head>
   <body>
